--- a/index.html
+++ b/index.html
@@ -22,19 +22,20 @@
         <span>7</span>
         <span>8</span>
         <span>9</span>
-            <span>+</span>
+        <span id="clear">C</span>
         <span>6</span>
         <span>5</span>
         <span>4</span>
-            <span>-</span>
+        <span>-</span>
         <span>3</span>
         <span>2</span>
         <span>1</span>
-            <span>*</span>
+        <span>+</span>
         <span>0</span>
-            <span id="equal">=</span>
-             <span id="clear">C</span>
+        <span>.</span>
+        <span>*</span>
             <span>/</span>
+        <span id="equal">=</span>
 
     </div>
 </div>
